test/errhandling/parallel/coforall-on-calls-throwing-fn.good
coforall-on-calls-throwing-fn.chpl:7: In function 'badFn':
coforall-on-calls-throwing-fn.chpl:9: error: call to throwing function throwingFn without throws, try, or try! (relaxed mode)
coforall-on-calls-throwing-fn.chpl:6: note: throwing function throwingFn defined here
